--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "version": "0.0.1",
     "description": "",
     "main": "index.js",
+    "engines": {
+        "node": "7.10.0",
+        "npm": "4.2.0"
+    },
     "scripts": {
         "build:dev": "cross-env NODE_ENV=development webpack --config webpack/webpack.dev.config.js",
         "build:prod": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js",
-        "start": "cross-env NODE_ENV=development node serverscreator/development",
-        "start:prod": "cross-env NODE_ENV=production node serverscreator/production",
+        "start": "cross-env NODE_ENV=production node serverscreator/development",
+        "start:dev": "cross-env NODE_ENV=development node serverscreator/production",
         "test": "tsc && mocha --require test-setup --recursive ./dist/**/__spec__/**/*-spec.js"
     },
     "author": "forex@forex-social.com",
@@ -30,8 +34,10 @@
         "lodash": "^4.17.4",
         "react": "15.3.2",
         "react-dom": "15.3.2",
+        "cross-env": "5.0.5",
         "react-google-charts": "^1.5.5",
         "react-hot-loader": "1.3.0",
+        "react-intl": "2.4.0",
         "react-redux": "4.4.5",
         "react-router": "2.8.1",
         "react-router-redux": "4.0.6",
@@ -45,9 +51,8 @@
         "ts-loader": "0.8.1",
         "typescript": "2.4.1",
         "url-loader": "0.5.5",
-        "webpack": "2.1.0-beta.22"
-    },
-    "devDependencies": {
+        "webpack": "2.1.0-beta.22",
+        "proxy-middleware": "0.15.0",
         "babel": "6.5.2",
         "babel-core": "6.11.4",
         "babel-loader": "6.2.4",
@@ -56,7 +61,6 @@
         "babel-preset-stage-2": "6.11.0",
         "concurrently": "2.0.0",
         "cookie-parser": "1.4.3",
-        "cross-env": "5.0.5",
         "express": "4.13.4",
         "glob": "7.0.6",
         "grunt": "^0.4.5",
@@ -65,7 +69,7 @@
         "grunt-contrib-copy": "^0.8.1",
         "grunt-shell": "^1.1.2",
         "grunt-webpack": "^1.0.11",
-        "proxy-middleware": "0.15.0",
+
         "redux-devtools": "3.1.1",
         "redux-devtools-dock-monitor": "1.1.0",
         "redux-devtools-log-monitor": "1.0.9",
@@ -73,5 +77,6 @@
         "webpack-dev-middleware": "1.6.1",
         "webpack-dev-server": "1.14.1",
         "webpack-hot-middleware": "2.12.1"
-    }
+    },
+    "devDependencies": {}
 }
