--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
         "grunt-contrib-copy": "^0.8.1",
         "grunt-shell": "^1.1.2",
         "grunt-webpack": "^1.0.11",
-
+        "node-telegram-bot-api": "0.28.0",
         "redux-devtools": "3.1.1",
         "redux-devtools-dock-monitor": "1.1.0",
         "redux-devtools-log-monitor": "1.0.9",
