--- a/package.json
+++ b/package.json
@@ -1,69 +1,70 @@
 {
-    "name": "crypto-arbitrage-br",
-    "version": "0.0.1",
-    "description": "",
-    "main": "index.js",
-    "engines": {
-        "node": "7.10.0",
-        "npm": "4.2.0"
-    },
-    "scripts": {
-        "build:dev": "cross-env NODE_ENV=development webpack --config webpack/webpack.dev.config.js",
-        "build:prod": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js",
-        "start": "cross-env NODE_ENV=production node serverscreator/development",
-        "start:dev": "cross-env NODE_ENV=development node serverscreator/production",
-        "test": "tsc && mocha --require test-setup --recursive ./dist/**/__spec__/**/*-spec.js"
-    },
-    "author": "forex@forex-social.com",
-    "license": "GPL-3.0",
-    "dependencies": {
-        "axios": "0.16.2",
-        "babel-loader": "6.2.4",
-        "babel-preset-es2017": "6.24.1",
-        "babel-runtime": "6.9.2",
-        "ccxt": "^1.6.22",
-        "classnames": "2.2.5",
-        "css-loader": "0.22.0",
-        "express-enrouten": "1.3.0",
-        "file-loader": "0.8.4",
-        "history": "1.17.0",
-        "img-loader": "1.3.1",
-        "json-loader": "0.5.4",
-        "react": "15.3.2",
-        "react-dom": "15.3.2",
-        "cross-env": "5.0.5",
-        "react-google-charts": "^1.5.5",
-        "react-hot-loader": "1.3.0",
-        "react-intl": "2.4.0",
-        "react-redux": "4.4.5",
-        "react-router": "2.8.1",
-        "react-router-redux": "4.0.6",
-        "redux": "3.6.0",
-        "redux-ignore": "1.2.4",
-        "redux-logic": "0.12.2",
-        "rxjs": "5.4.2",
-        "style-loader": "0.13.0",
-        "tachyons": "4.5.5",
-        "ts-loader": "0.8.1",
-        "typescript": "2.4.1",
-        "url-loader": "0.5.5",
-        "webpack": "2.1.0-beta.22",
-        "proxy-middleware": "0.15.0",
-        "babel": "6.5.2",
-        "babel-core": "6.11.4",
-        "babel-polyfill": "6.9.1",
-        "babel-preset-react": "6.11.1",
-        "babel-preset-stage-2": "6.11.0",
-        "cookie-parser": "1.4.3",
-        "express": "4.13.4",
-        "glob": "7.0.6",
-        "node-telegram-bot-api": "0.28.0",
-        "redux-devtools": "3.1.1",
-        "redux-devtools-dock-monitor": "1.1.0",
-        "redux-devtools-log-monitor": "1.0.9",
-        "webpack-dev-middleware": "1.6.1",
-        "webpack-dev-server": "1.14.1",
-        "webpack-hot-middleware": "2.12.1"
-    },
-    "devDependencies": {}
+  "name": "crypto-arbitrage-br",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "engines": {
+    "node": "7.10.0",
+    "npm": "4.2.0"
+  },
+  "scripts": {
+    "build:dev": "cross-env NODE_ENV=development webpack --config webpack/webpack.dev.config.js",
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js",
+    "start": "cross-env NODE_ENV=production node serverscreator/development",
+    "start:dev": "cross-env NODE_ENV=development node serverscreator/production",
+    "test": "tsc && mocha --require test-setup --recursive ./dist/**/__spec__/**/*-spec.js"
+  },
+  "author": "forex@forex-social.com",
+  "license": "GPL-3.0",
+  "dependencies": {
+    "axios": "0.16.2",
+    "babel": "6.5.2",
+    "babel-core": "6.11.4",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.9.1",
+    "babel-preset-es2017": "6.24.1",
+    "babel-preset-react": "6.11.1",
+    "babel-preset-stage-2": "6.11.0",
+    "babel-runtime": "6.9.2",
+    "blinktrade": "0.0.9",
+    "ccxt": "^1.6.22",
+    "classnames": "2.2.5",
+    "cookie-parser": "1.4.3",
+    "cross-env": "5.0.5",
+    "css-loader": "0.22.0",
+    "express": "4.13.4",
+    "express-enrouten": "1.3.0",
+    "file-loader": "0.8.4",
+    "glob": "7.0.6",
+    "history": "1.17.0",
+    "img-loader": "1.3.1",
+    "json-loader": "0.5.4",
+    "node-telegram-bot-api": "0.28.0",
+    "proxy-middleware": "0.15.0",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-google-charts": "^1.5.5",
+    "react-hot-loader": "1.3.0",
+    "react-intl": "2.4.0",
+    "react-redux": "4.4.5",
+    "react-router": "2.8.1",
+    "react-router-redux": "4.0.6",
+    "redux": "3.6.0",
+    "redux-devtools": "3.1.1",
+    "redux-devtools-dock-monitor": "1.1.0",
+    "redux-devtools-log-monitor": "1.0.9",
+    "redux-ignore": "1.2.4",
+    "redux-logic": "0.12.2",
+    "rxjs": "5.4.2",
+    "style-loader": "0.13.0",
+    "tachyons": "4.5.5",
+    "ts-loader": "0.8.1",
+    "typescript": "2.4.1",
+    "url-loader": "0.5.5",
+    "webpack": "2.1.0-beta.22",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-dev-server": "1.14.1",
+    "webpack-hot-middleware": "2.12.1"
+  },
+  "devDependencies": {}
 }
